adding product deletes and correcting order saves and responses